# path_detection

./: .gitignore  CMakeLists.txt  README.md
algorithm/: multi_core_on_the_fly_scc_decomposition_algorithm.cpp  multi_core_on_the_fly_scc_decomposition_algorithm.h  multi_core_on_the_fly_scc_decomposition_algorithm.tpp  parallel_tarjan_algorithm.cpp  parallel_tarjan_algorithm.h  sequential_set_based_algorithm.cpp  sequential_set_based_algorithm.h
graph_node/: graph_node.h  on_the_fly_scc_graph_node.cpp  on_the_fly_scc_graph_node.h  on_the_fly_scc_graph_node.tpp
storage/: per_thread_reserve_storage.h  per_thread_reserve_storage_accessor.h  simple_storage.h
tests/performance_tests/: find_all_sccs_simple.cpp  path_detection.cpp
